# crypto-narrative-hunter-tfm

./: .gitignore  README.md
data-pipeline/: .env.example  .gitignore  README_data_collection.md  check_progress.py  cli_calculate_performance.py  cli_collect_additional_tokens.py  cli_collect_daily_balances.py  cli_data_quality_report.py  cli_enhance_token_metrics.py  cli_export_datasets.py  cli_feature_engineering.py  cli_liquidity.py  cli_simple_performance.py  cli_transactions.py  cli_transactions_dune.py  pyproject.toml  requirements.txt  run_cluster_interpretation.py  run_clustering_analysis.py  run_clustering_final.py  run_clustering_optimized.py  run_eda_analysis.py  run_token_collection.py
data-pipeline/analysis/: EDA_EXECUTIVE_SUMMARY.md  EDA_VALIDATION_REPORT.md  comprehensive_eda.py  comprehensive_eda_part2.py  comprehensive_eda_part3.py  detailed_wallet_analysis.py
data-pipeline/config/: dune_query_ids.yaml
data-pipeline/data_collection/: cli.py
data-pipeline/docs/: BALANCE_COLLECTION_GUIDE.md  DATA_COLLECTION_COMPLETE.md  EXECUTION_SUMMARY.md  FEATURE_DICTIONARY.md  NARRATIVE_CATEGORIES_UPDATE.md  OPERATIONAL_GUIDE.md  README_BALANCE_SNAPSHOTS.md  STORY_4.1_COMPLETE.md  TRANSACTION_COLLECTION.md
data-pipeline/services/: __init__.py  archive_backup.py  block_mapper.py  checkpoint_manager.py  cohort_analysis.py  dataset_export.py  extract_dune_data.py  narrative_analysis.py  performance_benchmarking.py  quality_assurance.py  query_error_handler.py  risk_profiling.py  smart_wallet_query_manager.py
data-pipeline/sql/: enhance_token_metrics.sql  (+5 more)
(+166 files in other folders)
